namespace Domino.Enumerations;

public enum Side
{
    LEFT,
    RIGHT
}